# east

./: Cargo.toml
src/: config.rs  dep.rs  fetch_git2.rs  init.rs  lib.rs  lock.rs  lockfile.rs  main.rs  manifest.rs  resolve.rs  resolver.rs  west.rs
src/resolver/: file.rs  git.rs
src/resolver/git/: git2_resolver.rs  github_resolver.rs
tests/: east.toml  zephyr.west.yml
