[package]
name = "east"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1"
fs_extra = "1.3.0"
git2 = "0.20.4"
log = "0.4.29"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tar = "0.4"
tempdir = "0.3.7"
thiserror = "2.0.18"
toml = "1.1.2"
url = { version = "2.5.8", features = ["serde"] }
